--- a/TPC_Gonzalez_Jesus/Negocio/Negocio.csproj
+++ b/TPC_Gonzalez_Jesus/Negocio/Negocio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConexionBase.cs" />
+    <Compile Include="PersonaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TicketNegocio.cs" />
   </ItemGroup>
