Se modifica botones del login y la interface. Se crea pag DashCliente

--- a/TPC_Gonzalez_Jesus/SistemaDeTickets/SistemaDeTickets.csproj
+++ b/TPC_Gonzalez_Jesus/SistemaDeTickets/SistemaDeTickets.csproj
@@ -115,6 +115,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="DashBoard.aspx" />
+    <Content Include="DashCliente.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -198,6 +199,13 @@
     </Compile>
     <Compile Include="DashBoard.aspx.designer.cs">
       <DependentUpon>DashBoard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="DashCliente.aspx.cs">
+      <DependentUpon>DashCliente.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DashCliente.aspx.designer.cs">
+      <DependentUpon>DashCliente.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
