--- a/TPC_Gonzalez_Jesus/SistemaDeTickets/SistemaDeTickets.csproj
+++ b/TPC_Gonzalez_Jesus/SistemaDeTickets/SistemaDeTickets.csproj
@@ -166,6 +166,7 @@
     <Content Include="Style.css" />
     <Content Include="StyleSheet1.css" />
     <Content Include="ViewSwitcher.ascx" />
+    <Content Include="VistaTicketCliente.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
@@ -274,6 +275,13 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="VistaTicketCliente.aspx.cs">
+      <DependentUpon>VistaTicketCliente.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VistaTicketCliente.aspx.designer.cs">
+      <DependentUpon>VistaTicketCliente.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
